title menu: bugfix- title behind board previes, positioning corrected

--- a/src/app/boards-overview/boards-overview.component.scss
+++ b/src/app/boards-overview/boards-overview.component.scss
@@ -6,10 +6,11 @@ h2 {
 
 .preview-container {
   display: flex;
-  min-height: calc(100vh - 210px);
-padding: 20px;
-  gap: 40px;
+  justify-content: center;
   flex-wrap: wrap;
+  gap: 40px;
+  min-height: calc(100vh - 210px);
+  padding: 20px;
   background-color: rgba(var(--theme-color-dark), 0.2);
 }
 
