--- a/src/app/title/title.component.scss
+++ b/src/app/title/title.component.scss
@@ -95,6 +95,10 @@
 .left{
   right: 0;
 }
+.top{
+  top: unset;
+  bottom: 22px;
+}
 
 .edit-menu-item {
   display: flex;
